Tilføjelse af ImageUpload funktionalitet - del 1

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dqhfybrll",
+    "ApiKey": "638665316326586",
+    "ApiSecret": "_yxKiieDriD-MZq7bR0w8LWRT10"
+  }
 }
